2008-06-16  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/indexer.rb:  Fix quick_index generation.
	* lib/rubygems/specification.rb:  Correctly guard new spec features
	for older RubyGems.
	* lib/rubygems/config_file.rb:  Add system-wide config file
	(/etc/gemrc).  Patch #14723 by Phil Hagelberg.  Add windows code to
	use appropriate directory.  Code by Daniel Berger.
	* doc/release_notes/rel_1_2_0.rdoc:  Draft of 1.2.0 release notes.

2008-06-15  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/server.rb:  Store off if we are returning Marshal
	format before running =~ again.  Fixes bug reported by Chad Wooley.
	* lib/rubygems/commands/stale_command.rb:  `gem stale` lists gems by
	last access time.  Patch #20593 by Aaron Patterson.
	* lib/rubygems/setup.rb:  Add --vendor and --destdir to setup.rb for
	packagers.  Patch #20610 by Richard Brown.  Don't look for stub
	files to remove any more.
	* lib/rubygems/specification.rb:  Bump specification version and be
	backwards compatible with type 2 specs.
	* lib/rubygems/commands/query_command.rb:  Add installed location to
	details for installed gems.

2008-06-09  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/dependency_installer.rb:  Only install all dependencies
	when install_dir option is set.  Don't include satisfied dependencies
	when gathering dependencies.
	* lib/rubygems/commands/query_command.rb:  Display authors, rubyforge
	and homepage urls with details.
	* lib/rubygems/commands/environment_command.rb:  Add executable
	directory (from Rubinius).
	* lib/rubygems/commands/install_command.rb:  Don't set install_dir by
	default.
	* lib/rubygems/commands/update_command.rb:  Don't set install_dir by
	default.  Use #find_missing for efficiency.

2008-06-07  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/server.rb:  Fully mirror Gem::Indexer indexes, set
	correct content-type headers, always refresh the source index.
	* lib/rubygems/source_index.rb:  Add spec_dirs so that #refresh! will