@@ -1,3 +1,10 @@
+2008-06-17  Eric Hodel  <drbrain@segment7.net>
+
+	* lib/rubygems/version.rb:  Gem::Version #hash and #eql? now operate
+	on the version string, terms of the version string, so "1" and "1.0"
+	no longer correspond to the same slot.  Fixes indexer bug reported by
+	Chad Wooley.
+
 2008-06-16  Eric Hodel  <drbrain@segment7.net>
 
 	* lib/rubygems/indexer.rb:  Fix quick_index generation.
